@@ -1,21 +1,21 @@
 {
-  "timestamp" : "2025-12-19T02:08:45Z",
-  "count_outdated" : 273,
-  "uniques_outdated" : 206,
-  "count" : 276,
-  "uniques" : 209,
+  "timestamp" : "2025-12-23T02:09:52Z",
+  "count_outdated" : 275,
+  "uniques_outdated" : 208,
+  "count" : 277,
+  "uniques" : 210,
   "clones" : [
     {
-      "timestamp": "2025-12-08T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-12-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-12-10T00:00:00Z",
+      "timestamp": "2025-12-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
