@@ -1,14 +1,14 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 2,
+  "uniques": 2,
   "clones": [
     {
-      "timestamp": "2025-12-08T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "timestamp": "2025-12-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     },
     {
-      "timestamp": "2025-12-10T00:00:00Z",
+      "timestamp": "2025-12-22T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
