@@ -1,3 +1,12 @@
+2025-12-23T02:09:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20449292529 # 847
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-23
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 206 273 / 209 276
+* notice: next accum: outdated-unq outdated-all / unq all: 208 275 / 210 277
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-12-08] / [2025-12-22]
+
 2025-12-19T02:08:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20357470988 # 843
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
